# tarmac

./: .bzrignore  AUTHORS  Dockerfile  Makefile  run-tests  setup.cfg  setup.py
docs/: introduction.txt
tarmac/: __init__.py  __main__.py  branch.py  config.py  exceptions.py  hooks.py  log.py  plugin.py  xdgdirs.py
tarmac/plugins/: __init__.py  allowedcontributors.py  bugresolver.py  ciavc.py  command.py  commitmessage.py  recipebuilder.py  votes.py
tarmac/plugins/tests/: test_allowedcontributors.py  test_bugresolver.py  test_command.py  test_commitmessage.py  test_recipebuilder.py  test_tarmac_plugin.py  test_tarmac_pluign.py  test_votes.py
tarmac/tests/: __init__.py  test_branch.py  test_commands.py  test_config.py  test_log.py  test_plugin.py  test_registry.py
