[metadata]
name = tarmac
version = attr:tarmac.__version__
description = Tarmac - The Launchpad Lander
license = GPLv3
author = Tarmac Developers
url = https://launchpad.net/tarmac
long_description = 
    Tarmac is a series of scripts to facilitate the landing of Bazaar
    branches in Launchpad (https://launchpad.net).

[options]
install_requires = httplib2
packages = 
    tarmac
    tarmac.bin
    tarmac.plugins
    tarmac.tests

[entry_points]
console_scripts =
    tarmac = tarmac.__main__:main
