[metadata]
name = tarmac
version = attr:tarmac.__version__
description = Tarmac - The Launchpad Lander
license = GPLv3
author = Tarmac Developers
url = https://launchpad.net/tarmac
long_description =
    Tarmac is a series of scripts to facilitate the landing of Bazaar
    branches in Launchpad (https://launchpad.net).

[options]
zip_safe = True
install_requires =
    breezy
    httplib2
    launchpadlib
    paramiko
packages =
    tarmac
    tarmac.bin
    tarmac.plugins
    tarmac.tests

[options.entry_points]
console_scripts =
    tarmac=tarmac.__main__:main
